--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <script src="jquery-3.2.1.min.js"></script>
     </head>       
     <body>
-        <canvas id="game_canvas" width="600" height="600" style="border:1px solid black"></canvas>
+        <canvas id="game_canvas" width="500" height="500" style="border:1px solid black"></canvas>
         <div id="highdiv">
             <table id="hightable">
                 <tr>
@@ -27,6 +27,8 @@
                 </tr>
             </table>    
         </div>
+        <script type='text/javascript' src='drawLoop.js'></script>
+        <script type='text/javascript' src='mouseEvent.js'></script>
     </body>
 </html>
        
