--- a/index.html
+++ b/index.html
@@ -5,12 +5,15 @@
         <meta name="author" content="We Love Hot Dads">
         <meta charset="utf-8">
         <title>Requiem of TD</title>
-        <link rel="stylesheet" type= text/css" href="dads.css" />
+        <link rel="stylesheet" type= "text/css" href="main.css" />
         <link rel="stylesheet" href="highscore.css">
         <script src="jquery-3.2.1.min.js"></script>
     </head>       
     <body>
-        <canvas id="game_canvas" width="500" height="500" style="border:1px solid black"></canvas>
+       <header>
+         <h1 id="gameTitle">Requiem of Tower Defense</h1>
+       </header>
+        <canvas id="game_canvas" width="500" height="500"></canvas>
         <div id="highdiv">
             <table id="hightable">
                 <tr>
