--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       <div id="gameInfo">
         <div id="startBtnGroup" class="btn-group">
           <p id="startBtn" class="button" data-color="green">Start</p>
+          <p id="startBtn" class="button" data-color="green" style="display: none;">Restart</p>
         </div>
         <div id="towerSelection" class="btn-group">
           <h2>Towers</h2>
