--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
     </div>
     <script src='./drawLoop.js'></script>
     <script src='./mouseEvent.js'></script>
+    <script src='./classes.js'></script>
   </body>
 </html>
 
