--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
   </head>       
   <body>
     <header>
+      <img class="left" src="images/thumbnail.png" width="75" height="auto"/>
       <h1 id="gameTitle">Requiem of Tower Defense</h1>
+      <img class="right" src="images/thumbnail.png" width="75" height="auto"/>
     </header>
     <section>
       <div id="gameInfo">
