Better separation, mostly functional game

--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@
         </tr>
       </table>    
     </div>
-    <script src='./drawLoop.js'></script>
+    <script src='./gameLoop.js'></script>
+    <script src='./main.js'></script>
     <script src='./mouseEvent.js'></script>
     <script src='./classes.js'></script>
   </body>
