Draw tower buttons dynamically

--- a/index.html
+++ b/index.html
@@ -23,9 +23,7 @@
         </div>
         <div id="towerSelection" class="btn-group">
           <h2>Towers</h2>
-          <p id="standardTower" class="button towerButton selectedTower" data-damage="10" data-color="green">Standard</p>
-          <p id="powerfulTower" class="button towerButton" data-damage="20" data-color="yellow">Powerful</p>
-          <p id="fastTower" class="button towerButton" data-damage="5" data-color="red">Fast</p>
+	  <div id="towerButtons"></div>
         </div>
         <div>
           <h2>Wave</h2>
