Functioning money and score tracking system (score not shown yet)

--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
           <p id="waveNumber">1</p>
           <h2>Health</h2>
           <p id="health">100</p>
+          <h2>Money</h2>
+          <p id="money"></p>
         </div>
       </div>
       <div id="canvasContainer">
