We now have waves

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </div>
         <div>
           <h2>Wave</h2>
-          <p id="waveNumber">1</p>
+          <p id="waveNumber"></p>
           <h2>Health</h2>
           <p id="health">100</p>
           <h2>Money</h2>
