--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
         </tr>
       </table>    
     </div>
+    <script type="text/javascript" src="HighscoreAPI.js"></script>
     <script src='./gameLoop.js'></script>
     <script src='./main.js'></script>
     <script src='./mouseEvent.js'></script>
