--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
           <p id="health">100</p>
           <h2>Money</h2>
           <p id="money"></p>
+          <h2>Score</h2>
+          <p id="score"></p>
         </div>
       </div>
       <div id="canvasContainer">
