--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
   </head>       
   <body>
     <header>
-      <img class="left" src="images/thumbnail.png" width="75" height="auto"/>
+      <img class="left" src="images/thumbnail.png" alt="dad" width="75"/>
       <h1 id="gameTitle">Requiem of Tower Defense</h1>
-      <img class="right" src="images/thumbnail.png" width="75" height="auto"/>
+      <img class="right" src="images/thumbnail.png" alt="dad" width="75"/>
     </header>
     <section>
       <div id="gameInfo">
@@ -49,10 +49,10 @@
       </table>
       <table id="myhightable">
         <tr>
-          <th colspan="2">Your High Score</th>
+          <th>Your High Score</th>
         </tr>
         <tr id="myhighscore">
-          <td colspan="2">You don't have one yet!</td>
+          <td>You don't have one yet!</td>
         </tr>
       </table>    
     </div>
